2011-07-10  Corinna Vinschen  <corinna@vinschen.de>

	* objectfile.cc (ObjectFile::ObjectFile): Add basic executable file
	checks to avoid crashes.

2011-07-10  Corinna Vinschen  <corinna@vinschen.de>

	* getimageinfos.cc (GetImageInfos64): Return machine type rather than
	just a 32/64 bit flag.
	* imagehelper.h (GetImageInfos64): Ditto in declaration.
	* objectfile.h (ObjectFile::machine_type): New private variable.
	(ObjectFile::machine): New method.
	* objectfile.cc (ObjectFile::ObjectFile): Set machine_type from file
	header.

2011-07-08  Corinna Vinschen  <corinna@vinschen.de>

	Allow to work with 64 bit images and make code 64 bit clean.
	* getimageinfos.cc (GetImageInfos64); New function, take over
	functionality from GetImageInfos and handle 32 and 64 bit images.
	(GetImageInfos): Just call GetImageInfos64.
	* imagehelper.h (ReBaseImage64): Declare.
	(GetImageInfos64): Declare.
	* objectfile.cc (Win32Path): Fix codepage to CP_OEMCP.
	(ObjectFile::ObjectFile): Set new is64bit_img flag.  Set ImageBase
	according to address size of platform.
	(LinkedObjectFile::LinkedObjectFile): Handle 64 bit images.
	(LinkedObjectFile::rebind): Ditto.  Use uintptr_t rather than uint.
	(LinkedObjectFile::unbind): Ditto.
	* objectfile.h (ObjectFile::getNTHeader): Remove.
	(ObjectFile::getNTHeader64): New method.
	(ObjectFile::getNTHeader32): New method.
	(ObjectFile::is64bit): New method.
	(ObjectFile::is32bit): New method.
	(ObjectFile::ImageBase): Convert to ULONG64.
	(ObjectFile::ntheader): Change type to PIMAGE_NT_HEADERS32
	and make private.
	(ObjectFile::is64bit_img): New private BOOL member.
	* rebase_main.cc: Convert all base variables to ULONG64 and
	call ReBaseImage64.
	* rebaseimage.cc (ReBaseImage64): New function, take over
	functionality from ReBaseImage and handle 32 and 64 bit images.
	(ReBaseImage): Just call ReBaseImage64.
	* rebind_main.cc (main): Drop unused variables.
	* sections.cc (Section::Section): Use uintptr_t rather than uint.