@@ -1,3 +1,8 @@
+2011-08-03  Corinna Vinschen  <corinna@vinschen.de>
+
+	* objectfile.cc (ObjectFile::ObjectFile); Always open file with
+	FILE_FLAG_BACKUP_SEMANTICS rights.
+
 2011-07-10  Corinna Vinschen  <corinna@vinschen.de>
 
 	* objectfile.cc (ObjectFile::ObjectFile): Add basic executable file
